--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="capture_tcpdump_mobile">Capture mobile</string>
     <string name="capture_toast">Capturing tcpdump, please wait.</string>
     <string name="capture_stop">Stop Capture</string>
-
+    <string name="libhapviz_test">libhapviz test</string>
+    <string name="show_graphlet">Graphlet</string>
+    
 </resources>
