--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="capture_stop">Stop Capture</string>
     <string name="show_graphlet">Graphlet</string>
     <string name="settings">Settings</string>
-    <string name="file_open">Open...</string>
+    <string name="file_open">Open…</string>
+    <string name="import_file_title">Import File</string>
     
 </resources>
