commit for moving repos, probably not runnable

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="starttime">Starttime</string>
     <string name="endtime">Endtime</string>
     <string name="wrong_file_message">File extension not supported for import</string>
+    <string name="empty_flowtable_message">The flow table is empty. Did you specify the correct IP address for pcap file import?</string>
 </resources>
